# mermaid-timelines

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: schema.md
src/mermaid_timeline/: __init__.py  _time.py  buffer.py  cli.py  detreq.py  diagnostics.py  instrument_name.py  interval_reader.py  pipeline.py  plotting.py  summary.py
tests/: test_buffer.py  test_cli.py  test_detreq.py  test_instrument_name.py  test_pipeline.py  test_summary.py
